main.css
@import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Fredoka+One&display=swap');


/*********************************
* General
******************************** */

body {
    background-color: snow;
    color: slategrey;
    margin: 20px 0;
    font-family: 'Baloo 2', cursive;
    text-align: center;
}

h1, h2, h3, h4, h5, h6 {
    margin: 0;
}

h2 {
    font-size: 1em;
}

h1 {
    font-family: 'Fredoka One', cursive;
}

/*********************************
* Header
*********************************/
header{
    width:90%;
    margin:auto;
    display: flex;
    justify-content: space-between;
    margin-bottom: 20px;
}

header div{
    display: flex;
    flex-wrap: wrap;
    width:50%;
    margin-bottom: 20px;
}

header h1{
    text-align: left;
}

header div:last-child{
    display: flex;
    align-items: center;
}

/*********************************
* Container
*********************************/
.container{
    display: flex;
    width:90%;
    margin: auto;
    justify-content: space-between;
}

/*********************************
* Aside/Nav
*********************************/
aside{
    flex-basis: 15%;
    min-width:15%;
    display:flex;
    justify-content: flex-start;
    align-items: center;
}

ul{
    padding:0;
}

li{
    list-style: none;
    text-align: left;
}

/*********************************
* Main
*********************************/
main{
    width: 85%;
    flex-basis:85%;
}

div[class$='row']{
    display: flex;
    align-items:center;
    justify-content: space-between;
    margin-bottom: 1em;
}
.top-row img{
    width:100%;
}
.middle-row img{
    width:49%;
}
.bottom-row img{
    width:32%;
}

